--- a/templates/avg_commits.html
+++ b/templates/avg_commits.html
@@ -17,163 +17,7 @@
             "return_data": "true"
         }
 
-        $.getJSON("{{ api_url }}/", avg_commits_params, function (response) {
-
-            
-            response = {"data": [
-                {
-                    "Merged / Accepted": 5.0,
-                    "Not Merged / Rejected": 2.0,
-                    "year_month": "2018-01"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 2.0,
-                    "year_month": "2018-02"
-                },
-                {
-                    "Merged / Accepted": 7.3,
-                    "Not Merged / Rejected": 46.6,
-                    "year_month": "2018-03"
-                },
-                {
-                    "Merged / Accepted": 53.2,
-                    "Not Merged / Rejected": 4.5,
-                    "year_month": "2018-04"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.5,
-                    "year_month": "2018-05"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2018-06"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 2.0,
-                    "year_month": "2018-07"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2018-08"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 4.0,
-                    "year_month": "2018-09"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 2.5,
-                    "year_month": "2018-10"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 6.5,
-                    "year_month": "2018-11"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2018-12"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.2,
-                    "year_month": "2019-01"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.2,
-                    "year_month": "2019-02"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 24.8,
-                    "year_month": "2019-03"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.4,
-                    "year_month": "2019-04"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 26.2,
-                    "year_month": "2019-05"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2019-06"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 6.7,
-                    "year_month": "2019-07"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.7,
-                    "year_month": "2019-08"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.5,
-                    "year_month": "2019-09"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 9.0,
-                    "year_month": "2019-10"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 2.5,
-                    "year_month": "2019-11"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2019-12"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.8,
-                    "year_month": "2020-01"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 63.2,
-                    "year_month": "2020-02"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2020-03"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2020-06"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 2.0,
-                    "year_month": "2020-07"
-                },
-                {
-                    "Merged / Accepted": null,
-                    "Not Merged / Rejected": 1.0,
-                    "year_month": "2020-09"
-                }
-                ],
-                "repo_name": "linux"
-            }
+        $.getJSON("{{ api_url }}/pull_request_reports/average_commits_per_PR/", avg_commits_params, function (response) {
       
             let data = response["data"]
             console.log(data)
