--- a/templates/pie_chart.html
+++ b/templates/pie_chart.html
@@ -18,7 +18,7 @@
         }
         console.log("Making pie chart")
 
-        $.getJSON("{{ api_url }}/", pie_chart_params, function (response) {
+        $.getJSON("{{ api_url }}/contributor_reports/returning_contributors_pie_chart/", pie_chart_params, function (response) {
 
             console.log("Pie chart data")
             // console.log(response)
