--- a/templates/repo-info.html
+++ b/templates/repo-info.html
@@ -7,14 +7,20 @@
         <h1 id="message">Report for: {{ repo.repo_name|title }}</h1>
         <p><a href="https://{{ repo.url }}" target="_blank" data-toggle="tooltip" title="opens in new tab">https://{{ repo.url }}</a></p>
         <h2>Contributor Reports</h2>
-        <!-- <div style="width: 40%;">
-            {% include "contributor_counts_column_chart.html" %}
-        </div> -->
-        <!-- <div style="width: 40%;">
-            {% include "new_contributors_stacked_bar_chart.html" %}
-        </div> -->
         <div style="width: 40%;">
-            {% include "pr_stacked_bar.html" %}
+            {% include "contributor_counts_column_chart.html" %}
+        </div>
+        <div style="width: 40%;">
+            {% include "new_contributors_stacked_bar_chart.html" %}
+        </div>
+        <div style="width: 40%;">
+            {% include "pie_chart.html" %}
+        </div>
+        <div style="width: 40%;">
+            {% include "avg_comments.html" %}
+        </div>
+        <div style="width: 40%;">
+            {% include "avg_commits.html" %}
         </div>
         {% else %}
         <h1 id="message">Repository {{ repo_id }} not found<h1>
