Login development staging
This update begins the initial staging for `flask_login` integration.

Changes to initialization:
- A versioning system has been created, separated by Major, Minor, and
  Series
- A new setting "session_key" has been added, used to initialize the
  flask app's secret_key (used for session management)
- A staging user database connection will now be initialized on startup,
  this is a temporary sqlite3 user-store while development is ongoing

Changes to core app:
- Routes are now separated into `routes.py` and `api.py`, separating
  endpoints that render templates from those that return data
- Flask-login is now used to handle user login and logout

Changes to routes:
- More instances of `render_template` replaced with `render_module`
- The `/version` endpoint has been added, which returns the app version
  as a JSON string

Changes to templates:
- Login template updated with registration button
- Fix login form not having the correct `name` attributes on elements
- Navbar updated to use the flask_login `current_user` object

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,10 +15,10 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!-- COLLAPSABLE NAVBAR SECTION -->
 
-                {% if session['userID'] %}
+                {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ session['userID'] }}
+                        {{ current_user.id }}
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{{ url_for('repo_table_view') }}">Settings</a></li>
