--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,18 @@
             <hr/>
             <input type="text" id="userID" name="userID" class="form-control" placeholder="User ID" required autofocus>
             <br>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <input type="password" name="inputPassword" class="form-control" placeholder="Password" required>
             <br>
             <div class="checkbox mb-3">
                 <label>
-                    <input type="checkbox" value="remember-me">Remember me</input>
+                    <input type="checkbox" name="remember" value="remember-me"> Remember me</input>
                 </label>
             </div>
             <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
-                <button class="btn btn-outline-dark" style="color: white;" type="submit">Sign in</button>
+                <button class="btn btn-outline-dark" style="color: white;" type="submit" name="signin">Sign in</button>
+            </div>
+            <div class="btn" style="background-color: var(--color-accent); padding: 0; margin: 0;">
+                <button class="btn btn-outline-dark" style="color: white;" type="submit" name="register">Register</button>
             </div>
         </form>
     </div>
