Added dynamic toast message support
Toast messages can now be dynamically created at runtime by calling the
`flashToast` function. Toast creation is available globally, including
from within modules. A delay may optionally be specified, in ms.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -60,6 +60,10 @@ body {
     color: var(--color-fg);
 }
 
+#toast-placeholder {
+    display: none;
+}
+
 .display-table {
     background-color: white !important;
     overflow: auto;
