--- a/templates/index.html
+++ b/templates/index.html
@@ -19,42 +19,30 @@
     <link href="{{ url_for('static', filename= 'css/stylesheet.css') }}" rel="stylesheet">
 
     {% if title %}
-        <title>{{title}} - Augur View</title>
+    <title>{{title}} - Augur View</title>
     {% else %}
-        <title>Augur View</title>
+    <title>Augur View</title>
     {% endif %}
 
     {% if redirect %}
-        <meta http-equiv="refresh" content="{{ pause or 0 }}; URL='{{ url_for('root', path=redirect) }}'"/>
+    <meta http-equiv="refresh" content="{{ pause or 0 }}; URL='{{ url_for('root', path=redirect) }}'"/>
     {% endif %}
 </head>
 
 <body>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-      <div id="toasts" class="toast-container position-absolute">
-        {% for message in messages %}
-        <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-                <div class="toast-body">
-                    {{message}}
-                </div>
-                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-        </div>
-        {% endfor %}
-      {% endif %}
-    </div>
-    {% endwith %}
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <!-- TOASTS -->
+    {% include 'toasts.html' %}
     <!-- TOPNAV -->
     {% include 'navbar.html' %}
     <!-- body-content -->
     <div class="content">
         {% if body %}
-            {% include '%s.html' % body ignore missing %}
+        {% include '%s.html' % body ignore missing %}
         {% else %}
-            <h1>404 - Page Not Found</h1>
-            <p>The page you were looking for isn't here, try clicking one of the navigation links above</p>
+        <h1>404 - Page Not Found</h1>
+        <p>The page you were looking for isn't here, try clicking one of the navigation links above</p>
         {% endif %}
     </div>
 
@@ -72,18 +60,5 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script>
-    var toastElList = [].slice.call(document.querySelectorAll('.toast'))
-    var toastList = toastElList.map(function(toastEl) {
-        // Creates an array of toasts (it only initializes them)
-        return new bootstrap.Toast(toastEl) // No need for options; use the default options
-    });
-    setTimeout(function() {
-        toastList.forEach((toast, i) => setTimeout(() => { toast.show() }, i * 500)); // This show them
-    }, 1000);
-    </script>
 </body>
 </html>
