--- a/templates/first-time.html
+++ b/templates/first-time.html
@@ -59,6 +59,104 @@
     .editor-container {
         height: 300px !important;
     }
+
+    .spinner {
+        -webkit-animation: rotator 1.4s linear infinite;
+        animation: rotator 1.4s linear infinite;
+    }
+
+    .spinner-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    @-webkit-keyframes rotator {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(270deg);
+        }
+    }
+
+    @keyframes rotator {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(270deg);
+        }
+    }
+    .path {
+        stroke-dasharray: 187;
+        stroke-dashoffset: 0;
+        transform-origin: center;
+        -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+        animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+    }
+
+    @-webkit-keyframes colors {
+        0% {
+            stroke: #4285F4;
+        }
+        25% {
+            stroke: #DE3E35;
+        }
+        50% {
+            stroke: #F7C223;
+        }
+        75% {
+            stroke: #1B9A59;
+        }
+        100% {
+            stroke: #4285F4;
+        }
+    }
+
+    @keyframes colors {
+        0% {
+            stroke: #4285F4;
+        }
+        25% {
+            stroke: #DE3E35;
+        }
+        50% {
+            stroke: #F7C223;
+        }
+        75% {
+            stroke: #1B9A59;
+        }
+        100% {
+            stroke: #4285F4;
+        }
+    }
+    @-webkit-keyframes dash {
+        0% {
+            stroke-dashoffset: 187;
+        }
+        50% {
+            stroke-dashoffset: 46.75;
+            transform: rotate(135deg);
+        }
+        100% {
+            stroke-dashoffset: 187;
+            transform: rotate(450deg);
+        }
+    }
+    @keyframes dash {
+        0% {
+            stroke-dashoffset: 187;
+        }
+        50% {
+            stroke-dashoffset: 46.75;
+            transform: rotate(135deg);
+        }
+        100% {
+            stroke-dashoffset: 187;
+            transform: rotate(450deg);
+        }
+    }
     </style>
 </head>
 <body>
@@ -152,8 +250,18 @@
             </div>
         </div>
     </div>
+    <div id="loading-modal" class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered spinner-container">
+            <svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+                <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle>
+            </svg>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.7.1/ace.js" integrity="sha512-FKkEO4RZEQjFmU1hoUYdx6HJLdpHpNzgWspgnQCxx7OOkDVz4kiGJxR97yWc5bzjwcCpJC/CRCiQzuoGYAChhQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="{{ url_for('static', filename='js/sleep.js') }}"></script>
     <script>
+    var loadingModal = new bootstrap.Modal(document.getElementById('loading-modal'));
+
     // set up the code editor
     var editor = ace.edit("gunicorn-settings");
     editor.setTheme("ace/theme/one_dark");
@@ -200,20 +308,48 @@
         xhr.onreadystatechange = function() {
             if (xhr.readyState == XMLHttpRequest.DONE) {
                 if(xhr.status != 200) {
-                    // If an error occurred, display it to the user
-                    var text = document.getElementById("modal-text");
-                    text.innerHTML = xhr.responseText;
-                    var errorModal = new bootstrap.Modal(document.getElementById('error-modal'))
-                    errorModal.show();
+                    if(xhr.status) {
+                        // The first time setup server returned an error
+                        displayError(xhr.responseText);
+                    } else {
+                        // The first time setup server did not respond
+                        displayError("The first time setup server is unreachable");
+                    }
                 } else {
-                    // Shut down the temp server and wait for primary to initialize
-                    fetch("{{ url_for('shutdown') }}").then(() => {
-                        // The response from the config endpoint is the new approot
-                        setTimeout(() => window.location.replace(xhr.responseText), 1000);
-                    });
+                    // Display a loading indicator while starting up the production server
+                    loadingModal.show();
+                    waitToReload(xhr.responseText);
                 }
             }
         }
+    }
+
+    async function waitToReload(new_url) {
+        // Shut down the temp server and wait for primary to initialize
+        fetch("{{ url_for('shutdown') }}").then(async () => {
+            // The response from the config endpoint is the new approot
+            let count = 5;
+            while(--count >= 0) {
+                try {
+                    await sleep(1000);
+                    fetch(window.location + new_url).then(() => {
+                        window.location.replace(new_url);
+                    });
+                } catch(e) {
+                    // do nothing for now
+                }
+            }
+            displayError("Timeout reached waiting for production server");
+        });
+    }
+
+    // Pop up a modal window with the error text displayed
+    function displayError(error) {
+        loadingModal.hide();
+        var text = document.getElementById("modal-text");
+        text.innerHTML = error;
+        var errorModal = new bootstrap.Modal(document.getElementById('error-modal'))
+        errorModal.show();
     }
 
     // Have the settings-form call submit_form when submitted
