--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- TOASTS -->
-    {% include 'toasts.html' %}
+    {% include 'notifications.html' %}
     <!-- TOPNAV -->
     {% include 'navbar.html' %}
     <!-- body-content -->
@@ -48,7 +48,6 @@
         <p>The page you were looking for isn't here, try clicking one of the navigation links above</p>
         {% endif %}
     </div>
-
     <!-- footer -->
     <div class="jumbotron text-center footer">
         <div class="d-flex flex-fill align-content-between flex-wrap">
