--- a/templates/first-time.html
+++ b/templates/first-time.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link href="{{ url_for('static', filename='css/first_time.css') }}">
+    <link href="{{ url_for('static', filename='css/first_time.css') }}" rel="stylesheet">
 </head>
 <body>
     <!-- Bootstrap Bundle with Popper -->
